# fleet-management-api

./: Cargo.toml
docs/: architecture.md
migrations/: 20260627121902_create_vehicles_table.sql  20260711151933_add_vehicle_list_indexes.sql  20260711162250_create_drivers_and_vehicle_assignment.sql  20260712120658_make_driver_assignment_unique.sql
src/: cache.rs  config.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  repositories.rs  routes.rs  services.rs  state.rs
tests/: vehicles_api.rs
